--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,12 +65,22 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443" 
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - app
     networks:
       - web
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    networks: [web]
 
 networks:
   web:
