--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,30 +57,69 @@ services:
       NODE_ENV: production
       PORT: 3000
       DATABASE_URL: postgres://projectuser:projectpassword@postgres:5432/projectdb
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.app.rule=Host(`crsd.me`)
+      - traefik.http.routers.app.entrypoints=websecure
+      - traefik.http.routers.app.tls.certresolver=lehttp
+
+      - traefik.http.routers.app-http.rule=Host(`crsd.me`)
+      - traefik.http.routers.app-http.entrypoints=web
+      - traefik.http.routers.app-http.middlewares=redirect-https
+      - traefik.http.middlewares.redirect-https.redirectscheme.scheme=https
+
+      - traefik.http.services.app.loadbalancer.server.port=3000
     networks:
       - web
 
-  nginx:
-    image: nginx:latest
+  traefik:
+    image: traefik:v3.1
     restart: unless-stopped
+    command:
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+
+      - --certificatesresolvers.lehttp.acme.email=admin@crsd.me
+      - --certificatesresolvers.lehttp.acme.storage=/letsencrypt/acme.json
+      - --certificatesresolvers.lehttp.acme.httpchallenge=true
+      - --certificatesresolvers.lehttp.acme.httpchallenge.entrypoint=web
+
+      - --api.dashboard=true
+      - --api.insecure=true
+
     ports:
       - "80:80"
-      - "443:443" 
+      - "443:443"
+      - "8080:8080"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
-    depends_on:
-      - app
-    networks:
-      - web
-
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - ./certbot/www:/var/www/certbot
-      - ./certbot/conf:/etc/letsencrypt
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./letsencrypt:/letsencrypt
     networks: [web]
+
+  # nginx:
+  #   image: nginx:latest
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:80"
+  #     - "443:443" 
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - ./certbot/www:/var/www/certbot
+  #     - ./certbot/conf:/etc/letsencrypt
+  #   depends_on:
+  #     - app
+  #   networks:
+  #     - web
+
+  # certbot:
+  #   image: certbot/certbot:latest
+  #   volumes:
+  #     - ./certbot/www:/var/www/certbot
+  #     - ./certbot/conf:/etc/letsencrypt
+  #   networks: [web]
 
 networks:
   web:
