--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,11 +81,13 @@ services:
       - web
 
   traefik:
-    image: traefik:latest
+    image: traefik:v3.2    # лучше pinned, чем 'latest'
     restart: unless-stopped
     command:
+      - --log.level=DEBUG
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
+      - --providers.docker.endpoint=unix:///var/run/docker.sock
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
       - --certificatesresolvers.lehttp.acme.email=admin@crsd.me
@@ -96,7 +98,7 @@ services:
       - --api.insecure=true
     environment:
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - DOCKER_API_VERSION=1.44
+      - DOCKER_API_VERSION=1.44   # поставь значение из шага 1 (Min)
     ports:
       - "80:80"
       - "443:443"
